--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-asgiref    3.3.4
-Django     3.2.4
-Pillow     8.2.0
-pip        21.1.2
-psycopg2   2.9.1
-pytz       2021.1
-setuptools 56.0.0
-sqlparse   0.4.1
+asgiref==3.3.4
+Django==3.2.4
+Pillow==8.2.0
+psycopg2
+python-decouple==3.8
+pytz==2021.1
+sqlparse==0.4.1
