--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,10 @@ services:
     container_name: pgdb
     volumes:
       - pg_data:/var/lib/postgresql/data
+#    environment:
+#      - POSTGRES_DB=${SQL_DATABASE}
+#      - POSTGRES_USER=${SQL_USER}
+#      - POSTGRES_PASSWORD=${SQL_PASSWORD}
 
 volumes:
   pg_data:
